white-space:nowrap

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -112,6 +112,13 @@
         p.meta {
             margin: 0;
         }
+        p.content {
+            margin: 0;
+        }
+        table.content th, table.content td {
+            margin: 0;
+            white-space:nowrap;
+        }
     </style>
 </head>
 <body>
