--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -105,6 +105,12 @@
             
         }
     </script>
+    <script>
+        window.onload = (event) => {
+            console.log('page is fully loaded');
+            getFeedXML_eqvol();
+        };
+    </script>
     <style>
         h1.meta {
             margin: 0;
