--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -110,6 +110,9 @@
             console.log('page is fully loaded');
             getFeedXML_eqvol();
         };
+        setInterval(() => {
+            getFeedXML_eqvol();
+        }, 1000*5);
     </script>
     <style>
         h1.meta {
