--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -130,7 +130,5 @@
         }
     </style>
 </head>
-<body>
-    <input type="button" onclick="getFeedXML_eqvol()" value="getFeedXML_eqvol">
-</body>
+<body></body>
 </html>
