--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -32,6 +32,23 @@
         }
     </script>
     <script>
+        function datef(date) {
+            dateftext  = ''
+            dateftext += ''
+            dateftext += date.getFullYear();
+            dateftext += '/'
+            dateftext += date.getMonth();
+            dateftext += '/'
+            dateftext += date.getDate();
+            dateftext += ' '
+            dateftext += date.getHours();
+            dateftext += ':'
+            dateftext += date.getMinutes();
+            dateftext += ':'
+            dateftext += date.getSeconds();
+            dateftext += ''
+            return dateftext;
+        }
         function set_eqvol(eqvol) {
             eqvol = JSON.stringify(eqvol);
             return sessionStorage.setItem(
@@ -174,7 +191,7 @@
                 tableCell.append(linkText);
                 tableLine.append(tableCell);
                 tableCell = document.createElement('td');
-                tableCell.innerText = val_r.detail.Body.Earthquake.ArrivalTime;
+                tableCell.innerText = datef(new Date(val_r.detail.Body.Earthquake.ArrivalTime));
                 tableLine.append(tableCell);
                 tableCell = document.createElement('td');
                 //tableCell.innerText = val_r.author.name;
