fix google grecaptcha

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -102,6 +102,7 @@
                 } else {
                     console.debug( [xhr.responseText,xhr.readyState,xhr.status] );
                 }
+                grecaptcha_init();
             }
             xhr.open(
                 'GET',
