--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -211,7 +211,10 @@
                 tableCell.append(linkText);
                 tableLine.append(tableCell);
                 tableCell = document.createElement('td');
-                tableCell.innerText = datef(new Date(val_r.detail.Body.Earthquake.ArrivalTime));
+                linkText = document.createElement('a');
+                linkText.href = val_r.id;
+                linkText.innerText = datef(new Date(val_r.detail.Body.Earthquake.ArrivalTime));
+                tableCell.append(linkText);
                 tableLine.append(tableCell);
                 tableCell = document.createElement('td');
                 //tableCell.innerText = val_r.author.name;
