--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -26,7 +26,11 @@
             }
             xhr.open('POST','./google-sso.php');
             xhr.setRequestHeader('content-type', 'application/x-www-form-urlencoded;charset=UTF-8');
-            xhr.send( 'ts='+(Math.floor((new Date()).getTime()/1000)) );
+            xhr.send(
+                'ts='+(Math.floor((new Date()).getTime()/1000))
+                + '&' + 'client_id=' + googleUser.client_id
+                + '&' + 'credential=' + googleUser.credential
+            );
         }
     </script>
     <script>
