--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -20,6 +20,9 @@
                 if ( xhr.readyState === 4 && xhr.status === 200 ) {
                     console.debug( xhr.responseText );
                     console.log( JSON.parse(xhr.responseText) );
+                    document.querySelector('.g_id_signin').map(function(class_g_id_signin) {
+                        class_g_id_signin.style.display='none';
+                    });
                 } else {
                     console.debug( [xhr.responseText,xhr.readyState,xhr.status] );
                 }
