--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -20,7 +20,7 @@
                 if ( xhr.readyState === 4 && xhr.status === 200 ) {
                     console.debug( xhr.responseText );
                     console.log( JSON.parse(xhr.responseText) );
-                    Array.prototype.forEach.call(document.querySelector('.g_id_signin'), function(class_g_id_signin) {
+                    Array.prototype.forEach.call(document.querySelectorAll('.g_id_signin'), function(class_g_id_signin) {
                         class_g_id_signin.style.display='none';
                     });
                 } else {
