--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -345,17 +345,17 @@
         }
     </style>
     <style>
+        .g_id_signin {
+            position: fixed;
+            right: 0;
+        }
         @media screen and (orientation: portrait) {
             .g_id_signin {
-                position: fixed;
-                right: 0;
                 bottom: 0;
             }
         }
         @media screen and (orientation: landscape) {
             .g_id_signin {
-                position: fixed;
-                right: 0;
                 top: 0;
             }
         }
