--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -348,6 +348,7 @@
         .g_id_signin {
             position: fixed;
             right: 0;
+            z-index: 1;
         }
         @media screen and (orientation: portrait) {
             .g_id_signin {
