アイコン画像サイズ 100x100

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -362,6 +362,10 @@
             right: 0;
             z-index: 1;
         }
+        img.g_id_icon {
+            width: 100px;
+            height: 100px;
+        }
         @media screen and (orientation: portrait) {
             .g_id_signin {
                 bottom: 0;
