アイコン画像サイズ 50x50 角丸

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -363,8 +363,9 @@
             z-index: 1;
         }
         img.g_id_icon {
-            width: 100px;
-            height: 100px;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
         }
         @media screen and (orientation: portrait) {
             .g_id_signin {
