コメントアウト方式変更

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -253,15 +253,20 @@
                 tableCell = document.createElement('td');
                 tableCell.innerText = val_r.detail.Head.InfoKind;
                 tableLine.append(tableCell);
+                /*
                 tableCell = document.createElement('td');
-                //tableCell.innerText = val_r.detail.Head.InfoKindVersion;
-                //tableLine.append(tableCell);
+                tableCell.innerText = val_r.detail.Head.InfoKindVersion;
+                tableLine.append(tableCell);
+                /*
                 tableCell = document.createElement('td');
-                //tableCell.innerText = val_r.detail.Head.InfoType;
-                //tableLine.append(tableCell);
+                tableCell.innerText = val_r.detail.Head.InfoType;
+                tableLine.append(tableCell);
+                */
+                /*
                 tableCell = document.createElement('td');
-                //tableCell.innerText = val_r.detail.Head.Serial;
-                //tableLine.append(tableCell);
+                tableCell.innerText = val_r.detail.Head.Serial;
+                tableLine.append(tableCell);
+                */
                 tableCell = document.createElement('td');
                 tableCell.innerText = val_r.detail.Control.Status;
                 tableLine.append(tableCell);
@@ -357,12 +362,6 @@
         }
     </style>
     <style>
-        .g_id_signin {
-            position: fixed;
-            top: 0;
-            right: 0;
-            z-index: 1;
-        }
         img.g_id_icon {
             width: 50px;
             height: 50px;
