4fb4a132：タイトル行

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -187,7 +187,7 @@
             arrayList.push('ArrivalTime');
             //arrayList.push('Author');
             arrayList.push('Content');
-            arrayList.push('EventID');
+            //arrayList.push('EventID');
             arrayList.push('InfoKind');
             //arrayList.push('InfoKindVersion');
             //arrayList.push('InfoType');
