--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -322,10 +322,10 @@
         }
     </script>
     <script>
-        window.onload = (event) => {
+        window.addEventListener('load', function() {
             console.log('page is fully loaded');
             getFeedXML_eqvol();
-        };
+        });
         setInterval(() => {
             getFeedXML_eqvol();
         }, 1000*10);
