--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -278,15 +278,23 @@
                 tableCell = document.createElement('td');
                 tableCell.innerText = 'Comming soon...';
                 tableLine.append(tableCell);
-                /*
                 sub1_tableBlock = document.createElement('table');
                 sub1_tableBlock.classList.add('content');
                 sub1_tableBlock.border = 1;
                 sub1_tableMeta = document.createElement('thead');
-                sub1_tableLine = document.createElement('tr');
-                sub1_tableCell = document.createElement('th');
+                arrayList = [ '地区', '最大震度', ];
+                Object.keys([0]).forEach(function(key1) {
+                    sub1_tableLine = document.createElement('tr');
+                    Object.keys(arrayList).forEach(function(key2) {
+                        sub1_tableCell = document.createElement('th');
+                        sub1_tableCell.innerText = arrayList[key2];
+                        sub1_tableLine.append(sub1_tableCell);
+                    });
+                    sub1_tableMeta.append(sub1_tableLine);
+                });
                 sub1_val_r = val_r.detail.Body.Intensity.Observation.Pref;
                 console.debug(sub1_val_r);
+                /*
                 arrayList = [];
                 if (typeof sub1_val_r.Area != 'undefined') {
                     sub1_val_r.Area[0] = JSON.parse(JSON.stringify(sub1_val_r.Area));
