86ab9ee3 本体の表に入れる

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -311,6 +311,9 @@
                     //});
                 });
                 */
+                sub1_tableBlock.append(sub1_tableMeta);
+                tableCell.append(sub1_tableBlock);
+                tableLine.append(tableCell);
                 
                 console.debug(arrayList);
 
