--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -281,7 +281,7 @@
                 sub1_tableBlock.border = 1;
                 sub1_tableMeta = document.createElement('thead');
                 sub1_val_r = [0];
-                arrayList = [ '地区', '最大震度', ];
+                arrayList = [ '都道府県', '地区', '最大震度', ];
                 Object.keys(sub1_val_r).forEach(function(key1) {
                     sub1_tableLine = document.createElement('tr');
                     Object.keys(arrayList).forEach(function(key2) {
